[gd_scene load_steps=4 format=3 uid="uid://cw3evmjw7dh16"]

[ext_resource type="Script" path="res://Scripts/UI/Controls/new_thread_popup.gd" id="1_gxqic"]
[ext_resource type="Texture2D" uid="uid://bs4p4f5yu37l7" path="res://assets/icons/icons8-microphone-24.png" id="2_w88sq"]
[ext_resource type="Texture2D" uid="uid://b0e162p81b5qb" path="res://assets/icons/create_arrow_icons/create_arrow.png" id="3_ncgrc"]

[node name="NewThreadPopup" type="Window"]
auto_translate_mode = 1
initial_position = 4
size = Vector2i(450, 80)
visible = false
transient = true
exclusive = true
min_size = Vector2i(350, 0)
max_size = Vector2i(500, 100)
script = ExtResource("1_gxqic")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxTopRow" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_constants/separation = 14

[node name="Control3" type="Control" parent="VBoxContainer/HBoxTopRow"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxTopRow"]
layout_mode = 2
size_flags_horizontal = 0
text = "Name"

[node name="txtNewTabName" type="TextEdit" parent="VBoxContainer/HBoxTopRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Tab Name"
caret_blink = true

[node name="btnVoiceForNoteTab" type="Button" parent="VBoxContainer/HBoxTopRow"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_w88sq")

[node name="btnCreateThread" type="Button" parent="VBoxContainer/HBoxTopRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Create Notes Tab"
text = "Create"
icon = ExtResource("3_ncgrc")

[node name="Control2" type="Control" parent="VBoxContainer/HBoxTopRow"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="VBoxContainer/HBoxTopRow/btnVoiceForNoteTab" to="." method="_on_btn_voice_for_note_tab_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxTopRow/btnCreateThread" to="." method="_on_btn_create_thread_pressed"]
